fix(css): improve code readability
- Improve code readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,103 +64,128 @@ div.border {
     border: 1px solid black;
 }
 
-.ws3 table,
-.ws3 tr,
-.ws3 td{
-    margin: 10px;
-    padding: 10px;
-}
+.ws3 {
+    table,
+    tr,
+    td {
+        margin: 10px;
+        padding: 10px;
+    }
 
-.ws3 table,
-.ws3 tr,
-.ws3 td,
-.ws3 th,
-.ws5 table,
-ws5.tr,
-ws5.td {
-    border: 1px solid gray;
-    width: 50%;
-    border-collapse: collapse;
-    padding: 5px;
+    table,
+    tr,
+    td,
+    th {
+        border: 1px solid gray;
+        width: 50%;
+        border-collapse: collapse;
+        padding: 5px;
+    }
 }
 
 table.display {
     width: 100%;
 }
 
-.ws4 img {
-    position: relative;
-    left:0px;
+.ws4 {
+    img {
+        position: relative;
+        left:0px;
+    }
 }
 
-.ws5 div {
-    width: 200px;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid black;
+.ws5 {
+    table,
+    &.tr,
+    &.td {
+        border: 1px solid gray;
+        width: 50%;
+        border-collapse: collapse;
+        padding: 5px;
+    }
+    
+    div {
+        width: 200px;
+        margin: 20px;
+        padding: 20px;
+        border: 1px solid black;
+    }
+    
+    span {
+        display: none;
+    }
+    
+    .error {
+        span {
+            display: block;
+        }
+    } 
 }
 
-.ws5 span {
-    display: none;
+.ws6 {
+    div {
+        margin-bottom: 10px;
+    }
+
+    table,
+    tr,
+    td {
+        border: 1px solid gray;
+        width: 50%;
+    }
 }
 
-.ws5 .error span {
-    display: block;
+.ws7 {
+    table,
+    tr,
+    td {
+        border: 1px solid gray;
+        width: 50%;
+    }
+
+    div {
+        min-width: 200px;
+        width: auto;
+        min-height: 200px;
+        height: auto;
+        border: 1px solid black;
+    }
 }
 
-.ws6 div {
-    margin-bottom: 10px;
+.ws8 {
+    table {
+        border-collapse: collapse;
+        width: 700px;
+        border: 1px solid black;
+    }
+    
+    th,
+    td {
+        padding: 4px;
+        font-family: Verdana;
+        font-size: 12px;
+    }
+    
+    tr:nth-child(even) {
+        background-color: #f2f2f2
+    }
+    
+    th,
+    td {
+        border: 1px solid #ddd;
+    }
+    
+    td {
+        height: 40px;
+        text-align: center;
+        vertical-align: middle;
+    }
+    
+    img {
+        width: 100px;
+    }
 }
 
-.ws6 table,
-.ws6 tr,
-.ws6 td,
-.ws7 table,
-.ws7 tr,
-.ws7 td {
-    border: 1px solid gray;
-    width: 50%;
-}
-
-.ws7 div {
-    min-width: 200px;
-    width: auto;
-    min-height: 200px;
-    height: auto;
-    border: 1px solid black;
-}
-
-.ws8 table {
-    border-collapse: collapse;
-    width: 700px;
-    border: 1px solid black;
-}
-
-.ws8 th,
-.ws8 td {
-    padding: 4px;
-    font-family: Verdana;
-    font-size: 12px;
-}
-
-.ws8 tr:nth-child(even) {
-    background-color: #f2f2f2
-}
-
-.ws8 th,
-.ws8 td {
-    border: 1px solid #ddd;
-}
-
-.ws8 td {
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.ws8 img {
-    width: 100px;
-}
 
 #jsondata,
 #rawdata,
@@ -169,10 +194,18 @@ table.display {
     padding: 10px;
 }
 
-.ws9 div {
-    width: 200px;
-    height: 100px;
-    border: 1px solid black;
+.ws9 {
+    div {
+        width: 200px;
+        height: 100px;
+        border: 1px solid black;
+    }
+    
+    #main-content {
+        width: 100%;
+        height: auto;
+        border: 0;
+    }
 }
 
 #ajax {
@@ -181,10 +214,4 @@ table.display {
     border: 1px solid black;
     overflow: auto;
     padding: 20px;
-}
-
-.ws-9 #main-content {
-    width: 100%;
-    height: auto;
-    border: 0;
 }
